# APP-COMM-Psion_Converter

./: README.md  SYS$RPCS.IMG  Test  back  cmd  dir.msg  get  pftp.cmd  pprn.cmd  psiREXXfile.cmd  psiREXXproc.cmd  psiconv.txt  psiftp.eng  psiftp.rus  psiftp.txt  put  readme.1st  readme.rus
Doc/PsiConv/: INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  ascii  configure  configure.in  html  html4
Doc/PsiFtp/: PsiFtp_doc.htm  PsiREXX_doc.htm
LOCALE/EN_US/: IBM-437.LCL  IBM-437.LOC  IBM-850.LCL  IBM-850.LOC
LOCALE/ICONV/: CCSID.TBL  ICONV.LST
LOCALE/RU_RU/: IBM-866.LCL  IBM-866.LOC
LOCALE/UCONVTAB/: IBM-1251  IBM-437  IBM-850  IBM-850.GN  IBM-865  IBM-866  IBM-866.GN  IBM-878.XLT
Lib/: pcopyfr.c  pcopyfr.cmd  pcopyfr.def  pcopyfr.mak  pcopyto.c  pcopyto.cmd  pcopyto.def  pcopyto.mak  pdir.c  pdir.cmd  pdir.def  pdir.mak  plpncp.h  ps3file.h  ps5file.h  psfile.h  psilib.LIB  psilib.h  psiobj.h  psiwprt.c  psrpcs.h  pswprt.h  rpctest.c  sample.c
